# ModernSIMPL

./: CMakeLists.txt  README.md
Source/SIMPLib/: CMakeLists.txt  SIMPLibGlobal.h  pimpl_h.h  pimpl_impl.h
Source/SIMPLib/DataContainers/: AttributeMatrix.cpp  AttributeMatrix.h  AttributeMatrixModel.cpp  AttributeMatrixModel.h  DataContainer.cpp  DataContainer.h  DataContainerArray.cpp  DataContainerArray.h  DataContainerModel.cpp  DataContainerModel.h  IDataArray.cpp  IDataArray.h  IDataArrayModel.h
Source/Test/: CMakeLists.txt  SIMPLibUnitTest.cpp
